--- a/GITHUB/Backtracking.html
+++ b/GITHUB/Backtracking.html
@@ -12,7 +12,7 @@
            trying out the next option in that set of options. If you run out of options, revoke the choice that got you here, and try another choice
            at that node. If you end up at the root with no options left, there are no good leaves to be found.</p>
         <p>This needs an example.</p>
-        <Center><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/treesearch.gif" height="136" width="259" /></Center>
+        <Center><img src="treesearch.gif" height="136" width="259" /></Center>
         <ol type="1">
             <li>Starting at Root, your options are A and B. You choose A.</li>
             <li>At A, your options are C and D. You choose C.</li>
