--- a/GITHUB/Backtracking.html
+++ b/GITHUB/Backtracking.html
@@ -167,7 +167,7 @@
        this is not part of the definition of a binary tree, we will say that a node might or might not be a goal node, and will contain its name. 
        The first example in this paper (which we repeat here) shows a binary tree.
      </p>
-     <Center><img src="https://www.cis.upenn.edu/~matuszek/cit594-2012/Pages/backtracking_files/treesearch.gif" height="136" width="259" /></Center>
+     <Center><img src="treesearch.gif" height="136" width="259" /></Center>
      <p>Here's a definition of the BinaryTree class:</p>
      <pre><font size="4" color="brown">     public class BinaryTree {
         BinaryTree leftChild = null;
