--- a/Assessemnt3.html
+++ b/Assessemnt3.html
@@ -1,7 +1,7 @@
 <html>
     
     <body>
-        <iframe src="http://127.0.0.1:5500/Assessment%201.html" height="500" width="600" >   
+        <iframe src="http://127.0.0.1:5500/Assessment1.html" height="500" width="600" >   
         </iframe>
         <br>
         <br>
